no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -876,6 +876,7 @@ AMBIENT FILE ==>                  #File where every statement is declaration|TYP
                                   #  - type inference on import|export statements
                                   #  - only use top-level files (which is guessed from dependency tree)
                                   #  - non assigned import statements are kept
+                                  #  - keep comments (including JSDoc)
 --declarationDir DIR              #Def: same directory as file
 --emitDeclarationOnly             #Like --declaration + --noEmit
 --stripInternal                   #--declaration will ignore statements preceded with /** @internal */
