no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -182,19 +182,16 @@ VAR = VAL                         #Child of PATTERN, type 'AssignmentPattern' (d
 FUNC                              #FUNCTION:
                                   #  - [id IDENTIFIER] (null if anonymous)
                                   #  - params PATTERN_ARR
-                                  #  - body FUNCTION_BODY
+                                  #  - body FUNCTION_BODY (child of BLOCK_STATEMENT):
+                                  #     - body STATEMENT|DIRECTIVE_ARR
                                   #  - generator BOOL
                                   #  - async BOOL
-...                               #Child of BLOCK_STATEMENT, type 'FunctionBody':
-                                  #  - body STATEMENT|DIRECTIVE_ARR
+                                 A#  - expression BOOL
 
 [async] function [*]FUNC(...){}   #Child of FUNCTION+DECLARATION, type 'FunctionDeclaration'
 [async] function [*][FUNC](...){} #Child of FUNCTION+EXPR, type 'FunctionExpression'
-[async] [FUNC]() => {...}         #Child of FUNCTION+EXPR, type 'ArrowFunctionExpression':
-                                  #  - no id
-                                  #  - params PATTERN_ARR
-                                  #  - body BLOCK_STATEMENT or (if () => VAL) EXPR
-                                  #  - no generator
+[async] () => {...}               #Child of FUNCTION+EXPR, type 'ArrowFunctionExpression':
+                                  #  - body FUNCTION_BODY or (if () => VAL) EXPR
                                   #  - expression BOOL (if () => VAL)
 
 return [VAL]                      #Child of STATEMENT, type 'ReturnStatement':
