no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -455,6 +455,10 @@ class ... { VAR!: TYPE; ... }     #Useful when VAR is initialized but it cannot 
 VAL as const                      #
                                   #Type assertion adding Readonly<typeof VAL>
                                   #VAL must be a literal STR|NUM|BOOL|ARR|OBJ
+Literal values typing with TypeScript:
+  - if let "number" but if const NUM???
+  - applies to readonly too???
+  - applies to <const>VAL
 
 TRANSTYPING RULES ==>             #For TYPE2 <-- TYPE, TYPE2 must be contravariant to TYPE.
                                   #For FUNCs:
