no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.5.0 (current), 10.16.0 (active LTS), 8.16.0 (active LTS)
+VERSION ==>                                     #12.6.0 (current), 10.16.0 (active LTS), 8.16.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -681,6 +681,7 @@ OSTREAM.[un]cork()                              #cork() forces buffering to disk
                                                 #To do when writing a lot of small I/O, to make them all flush at once.
 OSTREAM.on("close", FUNC())                     #Like ISTREAM
 OSTREAM.on("finish", FUNC())                    #Fired when end() done
+OSTREAM.writableFinished                     12*#BOOL. Whether 'finish' event was fired.
 OSTREAM.on("[un]pipe", FUNC(ISTREAM))           #Fired by ISTREAM.[un]pipe()
 OSTREAM.on("error", FUNC(ERROR))                #
 
@@ -2205,12 +2206,20 @@ config                                          #Config flags and variables used
 arch                                            #Same as OS.arch()
 platform                                        #Same as OS.platform()
 
-memoryUsage()->OBJ                              #OBJ:
+memoryUsage()->OBJ                              #OBJ
                                                 #  - rss, heapTotal, heapUsed
                                                 #  - external
 cpuUsage([OBJ])->OBJ                            #OBJ: user|system NUM (time usage, in microseconds)
                                                 #If OBJ passed, is difference.
 uptime()                                        #
+
+resourceUsage()->OBJ                         12*#OBJ:
+                                             12*#  - user|systemCPUTime NUM: same as cpuUsage().user|system
+                                             12*#  - maxRSS NUM (in KB): max RSS memory
+                                             12*#  - minor|majorPageFault NUM: number of page faults
+                                             12*#  - fsRead|fsWrite NUM: number of I/O operations
+                                             12*#  - [in]voluntaryContextSwitches NUM: CPU time slices switches (not on Windows)
+                                             12*#  - sharedMemorySize|unsharedDataSize|unsharedStackSize|swappedOut|ipcSent|ipcReceived|signalsCount NUM: does not work on any OS
 
 hrtime([VAL])->VAL                              #Current time as [UINT, UINT2], where UINT is seconds and UINT2 nanoseconds.
                                                 #Not real time, but arbitrary one just to compare with another time check.
