no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -48,7 +48,7 @@ CONF.extends 'PACKAGE|FILE'[_ARR] #Merges a base CONF2
                                   #  - "eslint:all": all rules
 
 COMMON CONFIGS ==>                #Some famous configs are:
-                                  #  - eslint-config-standard (13.0.0-1): feross standard coding style
+                                  #  - eslint-config-standard (13.0.0): feross standard coding style
                                   #  - eslint-config-airbnb: airbnb coding style
 
 eslint --init                     #Create ./.eslintrc using interactive prompt
@@ -377,7 +377,7 @@ PLUGIN.processors.".EXT" OBJ      #OBJ:
                                              \=+===============================+=/
 
 
-STANDARD ==>                     ##Node module "standard" from feross (13.0.0-0)
+STANDARD ==>                     ##Node module "standard" from feross (13.0.0)
                                  ##Is a wrapper around ESLint with a different default config (eslint-config-standard)
 
 SEMISTANDARD ==>                 ##Node module (11.0.0)
