no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -842,13 +842,13 @@ start([OBJ])->REPLSERVER                        #Creates a REPLSERVER:
                                                 #  - input|output|terminal|prompt:
                                                 #     - like createInterface()
                                                 #     - but with defaults process.stdin|stdout
-                                                #  - eval(STR, OBJ, FILENAME, FUNC(ERROR, STR)):
-                                                #     - function to perform after each line
+                                                #  - eval(STR, OBJ, FILENAME, FUNC(ERROR, STR2)):
+                                                #     - input handler:
+                                                #        - STR is input
+                                                #        - STR2 is printed output
+                                                #        - OBJ is current context (global object)
                                                 #        - if ERROR is new Recoverable(ERROR), keep prompt ongoing (e.g. for multiline input)
                                                 #     - def is async. wrapper of eval():
-                                                #        - STR is command
-                                                #        - OBJ is current context (global object)
-                                                #        - STR2 is current module.filename
                                                 #  - useColors BOOL (def: process.stdout.hasColors())
                                                 #  - useGlobal BOOL (def: false): use current context, and not local one
                                                 #  - ignoreUndefined BOOL (def: false): if true, doesn't print output when it is undefined
