no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -91,7 +91,7 @@ ALTERNATIVES ==>                  #Must choose either:
                                              \=+===============================+=/
 
 
-VERSION ==>                       #3.1.4
+VERSION ==>                       #3.2.0
 
 require('core-js')                #Polyfills all
                                   #Prints some annoying messages on postinstall unless ENVVAR ADBLOCK set
@@ -112,6 +112,8 @@ CORE-JS-COMPAT(OPTS)->OBJ         #Returns compatible core-js FEATUREs against b
                                   #Returns OBJ:
                                   #  - list FEATURE_ARR
                                   #  - targets.FEATURE.BROWSER_NAME SEMVER
+
+ENVVAR DISABLE_OPENCOLLECTIVE=1   #Remove promotional messages on postinstall
 
 
                                              /=+===============================+=\
@@ -868,14 +870,14 @@ string/match-all                  #
 string/trim-end                   #
 string/trim-start                 #
 symbol/description                #
-
-ES2019 BUT CONSIDERED STAGE ==>   #
 promise/all-settled               #
 
 STAGE 3 ==>                       #
 global-this                       #
 
 STAGE 2 ==>                       #
+array/is-template-object          #
+promise/any                       #
 set/difference                    #
 set/intersection                  #
 set/symmetric-difference          #
@@ -884,6 +886,8 @@ set/is-disjoint-from              #
 set/is-subset-of                  #
 set/is-superset-of                #
 string/replace-all                #
+symbol/dispose                    #
+symbol/async-dispose              #
 
 STAGE 1 ==>                       #
 array/last-index                  #
@@ -907,6 +911,7 @@ map/of                            #
 map/reduce                        #
 map/some                          #
 map/update                        #
+map/update-or-insert              #
 math/clamp                        #
 math/deg-per-rad                  #
 math/degrees                      #
@@ -922,7 +927,6 @@ math/signbit                      #
 math/umulh                        #
 number/from-string                #
 observable                        #
-promise/any                       #
 promise/try                       #
 set/add-all                       #
 set/delete-all                    #
@@ -936,7 +940,6 @@ set/of                            #
 set/reduce                        #
 set/some                          #
 string/code-points                #
-symbol/dispose                    #
 symbol/observable                 #
 symbol/pattern-match              #
 weak-map/delete-all               #
